# illumipy

./: .defaults.py  LICENSE  README.md  appmap.yml  pyproject.toml
.github/workflows/: workflow.yml
illumipy/: __init__.py  __main__.py  appmap.yml  data.py  defaults.py  defaults.py.bak
illumipy/classes/: __init__.py  base_classes.py  defaults.py  illumination.py
tests/: __init__.py  appmap.yml  classtest.py
